--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                 <p>Dowodzi złodziejami ze swojej kryjówki, skonstruowanej przez Rio. Jest świetnym negocjatorem i nie zdradza swej osoby w rozmowach z inspektor Murillo. Jest perfekcjonistą i chce sam kontrolować każdą sytuację i je idealnie zaplanować. Brak kartoteki. Od dziewiętnastego roku życia nie odnowił dowodu osobistego. Na dobrą sprawę, to duch. Ale bardzo inteligentny.</p>
             </div>
             <div class="container-img">
-                <img class="boss-img" src="img/Profesor.jpg" alt="zdjęcie">
+                <img class="boss-img" src="img/Profesor.jpg" alt="Profesor">
             </div>
         </section>
 
@@ -58,7 +58,7 @@
                 <div class="container-img">
                     <img class="city-img" src="img/maska.jpg" alt="zdjęcie">
                     <h3 class="nameCity">R<span class="customLetter">&nbsp;io&nbsp;</span></h3>
-                    <img class="person-img toggler" src="img/Rio300x300.jpg" alt="zdjęcie">
+                    <img class="person-img toggler" src="img/Rio300x300.jpg" alt="Rio">
                     <h3 class="name toggler">Aníbal <span class="customLetter">Cor</span>tés</h3>
                     <button class="reval">odkryj</button>
                     <button class="cover toggler">zakryj</button>
@@ -95,7 +95,7 @@
                 <div class="container-img">
                     <img class="city-img" src="img/maska.jpg" alt="zdjęcie">
                     <h3 class="nameCity">tok<span class="customLetter">&nbsp;i&nbsp;</span>o</h3>
-                    <img class="person-img toggler" src="img/Tokio300x300.jpg" alt="zdjęcie">
+                    <img class="person-img toggler" src="img/Tokio300x300.jpg" alt="Tokio">
                     <h3 class="name toggler">Sielene <span class="customLetter">oli</span>viera</h3>
                     <button class="reval">odkryj</button>
                     <button class="cover toggler">zakryj</button>
@@ -129,7 +129,7 @@
                 <div class="container-img">
                     <img class="city-img" src="img/maska.jpg" alt="zdjęcie">
                     <h3 class="nameCity">berl<span class="customLetter">&nbsp;i&nbsp;</span>n</h3>
-                    <img class="person-img toggler" src="img/Berlin300X300.jpg" alt="zdjęcie">
+                    <img class="person-img toggler" src="img/Berlin300x300.jpg" alt="Berlin">
                     <h3 class="name toggler">And<span class="customLetter">res</span> Fonollosa</h3>
                     <button class="reval">odkryj</button>
                     <button class="cover toggler">zakryj</button>
@@ -163,7 +163,7 @@
                 <div class="container-img">
                     <img class="city-img" src="img/maska.jpg" alt="zdjęcie">
                     <h3 class="nameCity">Na<span class="customLetter">&nbsp;i&nbsp;</span>robi</h3>
-                    <img class="person-img toggler" src="img/Nairobi300x300.jpg" alt="zdjęcie">
+                    <img class="person-img toggler" src="img/Nairobi300x300.jpg" alt="Nairobi">
                     <h3 class="name toggler">Ágata J<span class="customLetter">im</span>énez</h3>
                     <button class="reval">odkryj</button>
                     <button class="cover toggler">zakryj</button>
@@ -197,7 +197,7 @@
                 <div class="container-img">
                     <img class="city-img" src="img/maska.jpg" alt="zdjęcie">
                     <h3 class="nameCity">M<span class="customLetter">&nbsp;o&nbsp;</span>skwa</h3>
-                    <img class="person-img toggler" src="img/Moskwa300x300.jpg" alt="zdjęcie">
+                    <img class="person-img toggler" src="img/Moskwa300x300.jpg" alt="Moskwa">
                     <h3 class="name toggler">augus<span class="customLetter">ti</span>n ramos</h3>
                     <button class="reval">odkryj</button>
                     <button class="cover toggler">zakryj</button>
@@ -231,7 +231,7 @@
                 <div class="container-img">
                     <img class="city-img" src="img/maska.jpg" alt="zdjęcie">
                     <h3 class="nameCity">de<span class="customLetter">&nbsp;n&nbsp;</span>wer</h3>
-                    <img class="person-img toggler" src="img/Denwer300x300.jpg" alt="zdjęcie">
+                    <img class="person-img toggler" src="img/Denwer300x300.jpg" alt="Denwer">
                     <h3 class="name toggler">dan<span class="customLetter">ie</span>l ramos</h3>
                     <button class="reval">odkryj</button>
                     <button class="cover toggler">zakryj</button>
@@ -265,7 +265,7 @@
                 <div class="container-img">
                     <img class="city-img" src="img/maska.jpg" alt="zdjęcie">
                     <h3 class="nameCity">hels<span class="customLetter">&nbsp;i&nbsp;</span>nki</h3>
-                    <img class="person-img toggler" src="img/Helsinki300x300.jpg" alt="zdjęcie">
+                    <img class="person-img toggler" src="img/Helsinki300x300.jpg" alt="Helsinki">
                     <h3 class="name toggler">Mirko dr<span class="customLetter">ag</span>ic</h3>
                     <button class="reval">odkryj</button>
                     <button class="cover toggler">zakryj</button>
@@ -301,7 +301,7 @@
                 <div class="container-img">
                     <img class="city-img" src="img/maska.jpg" alt="zdjęcie">
                     <h3 class="nameCity">os<span class="customLetter">&nbsp;l&nbsp;</span>o</h3>
-                    <img class="person-img toggler" src="img/Oslo300x300.jpg" alt="zdjęcie">
+                    <img class="person-img toggler" src="img/Oslo300x300.jpg" alt="Oslo">
                     <h3 class="name toggler">Radko Dr<span class="customLetter">ag</span>ic</h3>
                     <button class="reval">odkryj</button>
                     <button class="cover toggler">zakryj</button>
