delete background-attachement: fixed

--- a/index.html
+++ b/index.html
@@ -21,15 +21,15 @@
             <h2 class="logo">dom <span class="customLetter"> &nbsp;z </span> &nbsp;papieru</h2>
         </div>
     </section>
+        <header class="header">
+            <div class="hero-bg"></div>
+            <div class="hero-text">
+                <h1>Rewolucja nadchodzi!</h1>
+                <i class="fas fa-angle-down fa-flash"></i>
+            </div>
+        </header>
 
-    <header class="header">
-        <div class="hero-bg"></div>
-        <div class="hero-text">
-            <h1>Rewolucja nadchodzi!</h1>
-            <i class="fas fa-angle-down fa-flash"></i>
 
-        </div>
-    </header>
     <main>
         <section class="boss wrapper">
             <hr class="separating-line">
@@ -39,7 +39,10 @@
             <div class="about">
                 <h3>Sergio Marquina</h3>
                 <p>Profesor jest najważniejszą postacią - pomysłodawca i mózg całej operacji.</p>
-                <p>Dowodzi złodziejami ze swojej kryjówki, skonstruowanej przez Rio. Jest świetnym negocjatorem i nie zdradza swej osoby w rozmowach z inspektor Murillo. Jest perfekcjonistą i chce sam kontrolować każdą sytuację i je idealnie zaplanować. Brak kartoteki. Od dziewiętnastego roku życia nie odnowił dowodu osobistego. Na dobrą sprawę, to duch. Ale bardzo inteligentny.</p>
+                <p>Dowodzi złodziejami ze swojej kryjówki, skonstruowanej przez Rio. Jest świetnym negocjatorem i nie
+                    zdradza swej osoby w rozmowach z inspektor Murillo. Jest perfekcjonistą i chce sam kontrolować każdą
+                    sytuację i je idealnie zaplanować. Brak kartoteki. Od dziewiętnastego roku życia nie odnowił dowodu
+                    osobistego. Na dobrą sprawę, to duch. Ale bardzo inteligentny.</p>
             </div>
             <div class="container-img">
                 <img class="boss-img" src="img/Profesor.jpg" alt="Profesor">
@@ -207,18 +210,18 @@
                         Umiera podczas napadu w
                         mennicy od potrójnego postrzału ze strony policji, gdy osłaniał wracająca do budynku Tokio. W
                         serialu oprócz roli porywacza jest ojcem Denvera.
-                        <p>
-                            <div class="quote">
-                                <p class="line-through"><span>Cytat</span></p>
-                                <div class="stripe-border">
-                                    <blockquote>
-                                        <p>&ldquo;Jesli to się uda wyjedziemy do kraju którego nazwy nie potrafie nawet
-                                            wymówć.
-                                            Zaczniemy od początku.&rdquo;</p>
-                                    </blockquote>
-                                </div>
-                                <cite class="line-through"><span>Moskwa</span></cite>
-                            </div>
+                    <p>
+                    <div class="quote">
+                        <p class="line-through"><span>Cytat</span></p>
+                        <div class="stripe-border">
+                            <blockquote>
+                                <p>&ldquo;Jesli to się uda wyjedziemy do kraju którego nazwy nie potrafie nawet
+                                    wymówć.
+                                    Zaczniemy od początku.&rdquo;</p>
+                            </blockquote>
+                        </div>
+                        <cite class="line-through"><span>Moskwa</span></cite>
+                    </div>
                 </div>
 
                 <hr class="separating-line separating-line-person">
@@ -241,19 +244,19 @@
                         skoku stanowi bombę zegarową. Na pierwszy rzut oka wygląda jak zwykły przestępca, król walk
                         ulicznych. Dotknął wszystkich narkotyków. Pomimo swojego
                         osobliwego śmiechu ma wielkie serce i zrobiłby wszystko dla tych, których kocha. Syn Moskwy.
-                        <p>
-                            <div class="quote">
-                                <p class="line-through"><span>Cytat</span></p>
-                                <div class="stripe-border">
-                                    <blockquote>
-                                        <p>&ldquo;Tokio to pieprzone Maserati i każdy chce Maserati. A jeśli weźmiesz
-                                            Maserati,
-                                            zostaw go na ulicy z otwartymi drzwiami i
-                                            kluczami, musisz być bardzo popieprzony.&rdquo;</p>
-                                    </blockquote>
-                                </div>
-                                <cite class="line-through"><span>Denwer</span></cite>
-                            </div>
+                    <p>
+                    <div class="quote">
+                        <p class="line-through"><span>Cytat</span></p>
+                        <div class="stripe-border">
+                            <blockquote>
+                                <p>&ldquo;Tokio to pieprzone Maserati i każdy chce Maserati. A jeśli weźmiesz
+                                    Maserati,
+                                    zostaw go na ulicy z otwartymi drzwiami i
+                                    kluczami, musisz być bardzo popieprzony.&rdquo;</p>
+                            </blockquote>
+                        </div>
+                        <cite class="line-through"><span>Denwer</span></cite>
+                    </div>
                 </div>
                 <hr class="separating-line separating-line-person">
 
@@ -275,20 +278,20 @@
                         podczas jednego z
                         aresztowań to 2137.Twierdzi, że został gejem bo na wojnie tak prośćiej. Chłopcy opiekuja sie
                         sobą wzajemnie.
-                        <p>
-                            <div class="quote">
-                                <p class="line-through"><span>Cytat</span></p>
-                                <div class="stripe-border">
-                                    <blockquote>
-                                        <p>&ldquo;Musisz być wolny i odważny, bo uwierz mi, do miłości potrzeba więcej
-                                            odwagi
-                                            niż do wojny.&rdquo;</p>
-                                        <p>&ldquo;Arturito, Arturito! Odpocznij. Zajmę sie twoja raną. Zaraz
-                                            wrócę.&rdquo;</p>
-                                    </blockquote>
-                                </div>
-                                <cite class="line-through"><span>Helsinki</span></cite>
-                            </div>
+                    <p>
+                    <div class="quote">
+                        <p class="line-through"><span>Cytat</span></p>
+                        <div class="stripe-border">
+                            <blockquote>
+                                <p>&ldquo;Musisz być wolny i odważny, bo uwierz mi, do miłości potrzeba więcej
+                                    odwagi
+                                    niż do wojny.&rdquo;</p>
+                                <p>&ldquo;Arturito, Arturito! Odpocznij. Zajmę sie twoja raną. Zaraz
+                                    wrócę.&rdquo;</p>
+                            </blockquote>
+                        </div>
+                        <cite class="line-through"><span>Helsinki</span></cite>
+                    </div>
                 </div>
 
                 <hr class="separating-line separating-line-person">
@@ -310,7 +313,7 @@
                     <p>Żołnierze zawsze się przydadzą, a nie ma lepszych od Serbów. Możliwe, że myślą, ale nigdy się nie
                         dowiemy.Brat bliźniak Helsinki. Bardzo malo mówi, prawie wcale, jedyne słowa wypowiada do
                         swojego brata Helsinki w obcym języku. Zostaje zabity przez zakładników.
-                        <p>
+                    <p>
                 </div>
 
                 <hr class="separating-line separating-line-person">
